@@ -186,20 +186,6 @@ class Pool(object):
         with self._locks[self.database_name]:
             self._pool[self.database_name][type][cls.__name__] = cls
 
-    def object_name_list(self, type='model'):
-        '''
-        Return the object name list of a type
-
-        :param type: the type
-        :return: a list of name
-        '''
-        if type == '*':
-            res = []
-            for type in self.classes.keys():
-                res += self._pool[self.database_name][type].keys()
-            return res
-        return self._pool[self.database_name][type].keys()
-
     def iterobject(self, type='model'):
         '''
         Return an iterator over object name, object
